# rust_stm32f446re_blinky

./: .gitignore  .travis.yml  Cargo.toml  Embed.toml  README.md  memory.x  rust_stm32f446re_blinky.sln  rust_stm32f446re_blinky.vcxproj  rust_stm32f446re_blinky.vcxproj.filters
.github/workflow/: srust_stm32f446re_blinky_codecov.yml
.github/workflows/: rust_stm32f446re_blinky.yaml  rust_stm32f446re_blinky.yml  rust_stm32f446re_blinky_codecov.yml  rust_stm32f446re_blinky_rustfmt.yaml  rust_stm32f446re_blinky_rustfmt.yml  rust_stm32f446re_blinky_rustfmt_check.yml
examples/: led_blinky.rs
src/: led_blinky.rs
