[package]
name = "rust_stm32f466_blinky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.14"
panic-halt = "0.2.0"
stm32f4xx-hal = { version = "0.9.0", features = ["stm32f446", "rt"] }
rtt-target = { version = "0.3.0", features = ["cortex-m"] }
embedded-hal = "0.2.7"

#[dependencies]
#cortex-m = "0.7"
#cortex-m-rt = "0.7"
#stm32l4xx-hal = { version = "0.7.1", features = ["stm32f446", "rt"] }
#rtt-target = { version = "0.3.0", features = ["cortex-m"] }
#embedded-hal = "0.2.7"


[dev-dependencies]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'abort'
incremental = true

[profile.release]
opt-level = "s"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false

[[bin]]
name = "led_blinky"
path = "examples/led_blinky.rs"
